--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
  <!-- navigation -->
 
    <header>
+
     <h1>RUN BUDDY</h1>
+    <nav>
+        <!-- Unordered list element -->
+        <ul>
+            <!-- List item element -->
+            <li>
+                <!-- Anchor element -->
+                <a href="#what-we-do">What We Do</a>
+            </li>
+            <li>
+                <a href="#what-you-do">What You Do</a>
+            </li>
+            <li>
+                <a href="#your-trainers">Your Trainers</a>
+            </li>
+            <li>
+                <a href="#reach-out">Reach Out</a>
+            </li>
+        </ul>
+    </nav>
    </header>
 
  <!-- hero/jumbotron -->
@@ -41,7 +61,7 @@
    <section>
        <h2>Reach Out</h2>
    </section>
-   
+
    <footer>
        <h2>❤️ Made with love by Run Buddy.</h2>
    </footer>
