--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
   <head>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <meta charset="UTF-8" />
     <title>Run Buddy</title>
+
   </head>
 
   <body>
@@ -14,7 +16,7 @@
     <h1>
         <a href="/">RUN BUDDY</a>
     </h1>
-    
+
     <nav>
         <!-- Unordered list element -->
         <ul>
